feat(data): integrate currency conversion in cleaning notebook

--- a/notebooks/data_cleaning.ipynb
+++ b/notebooks/data_cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "id": "63ad94ea",
    "metadata": {},
    "outputs": [],
@@ -13,19 +13,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "id": "3022b9c9",
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
     "sys.path.append(\"../src\")\n",
-    "from cleaning_function import normalize_text\n"
+    "# from cleaning_function import normalize_text \n",
+    "from get_rates import obtener_tasa_ars\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "id": "4cc0d842",
    "metadata": {},
    "outputs": [],
@@ -43,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "id": "c80c1bb6",
    "metadata": {},
    "outputs": [
@@ -179,7 +180,7 @@
        "4               US            M  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "id": "2aa7e9f3",
    "metadata": {},
    "outputs": [
@@ -294,7 +295,7 @@
        "max      2025.000000  3.040000e+07  800000.000000     100.000000"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "id": "e2ff975e",
    "metadata": {},
    "outputs": [
@@ -336,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "id": "b9a451e4",
    "metadata": {},
    "outputs": [
@@ -346,7 +347,7 @@
        "(151445, 11)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "id": "dafabb89",
    "metadata": {},
    "outputs": [
@@ -370,7 +371,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 9,
    "id": "bf79789d",
    "metadata": {},
    "outputs": [],
@@ -399,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 10,
    "id": "d1464ee8",
    "metadata": {},
    "outputs": [],
@@ -409,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 11,
    "id": "2e548451",
    "metadata": {},
    "outputs": [],
@@ -419,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 12,
    "id": "c83704fc",
    "metadata": {},
    "outputs": [],
@@ -430,6 +431,36 @@
     "    \"SE\": \"senior\",\n",
     "    \"EX\": \"executive\"\n",
     "})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "34102d7c",
+   "metadata": {},
+   "source": [
+    "Actualizar Salarios a Pesos Argentinos mediante API"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "f4f3c89f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Salarios actualizados en ARS: 1452.25\n"
+     ]
+    }
+   ],
+   "source": [
+    "tasa_del_dia = obtener_tasa_ars()\n",
+    "if tasa_del_dia:\n",
+    "    df['salary_in_ars'] = df['salary_in_usd'] * tasa_del_dia\n",
+    "    print(f\"Salarios actualizados en ARS: {tasa_del_dia}\")\n",
+    "df.to_csv(\"../data/salaries_cleaned.csv\", index=False)"
    ]
   }
  ],
